# PETastic4

./: README.md  pyproject.toml  requirements.txt
data/2025/: mhetase.csv  petase.csv
data/supervised_2023/Alkaline phosphatase PafA  (In Silico_ Supervised)/: test.csv  train.csv
data/supervised_2023/Alpha-Amylase (In Silico_ Supervised)/: test.csv
data/supervised_2023/Imine reductase (In Silico_ Supervised)/: test.csv
data/supervised_2023/Imine reductase (In Silico_ Supervised)/predictions/: proteng4all.csv
data/supervised_2023/beta-glucosidase B  (In Silico_ Supervised)/: test.csv  train.csv
notebooks/: data-collection.ipynb  data_collection.ipynb
petastic4/: scrapping.py
